# simple_mobile_robot

./: .gitignore  README.md
src/kinematic_core/: README.md  package.xml  setup.cfg  setup.py
src/kinematic_core/kinematic_core/: movebase_kinematics_diff.py  movebase_kinematics_mecan.py  movebase_kinematics_omni.py
src/robot_description/: CMakeLists.txt  README.md  package.xml
src/robot_description/launch/: display.launch.py  rover.launch.py
src/robot_description/rviz/: rover.rviz
src/robot_description/src/description/: rover_robot.xacro
src/robot_launch/: README.md  package.xml  setup.py
src/robot_launch/config/: r1.yaml
src/robot_launch/launch/: actual.launch.py  bringup.launch.py  robot_launch.launch.py  sim.launch.py
src/roboteq_core/: README.md  package.xml  setup.py
src/roboteq_core/roboteq_core/: roboteq_driver.py
src/sim_robot/: README.md  package.xml  setup.py
src/sim_robot/sim_robot/: sim_robot_node.py
src/teleop_core/: README.md  setup.py
src/teleop_core/launch/: teleop_node.launch.py
src/teleop_core/teleop_core/: run_joy.py
src/virtual_joypad/: README.md  package.xml  setup.cfg  setup.py
src/virtual_joypad/config/: controller_config.yaml
src/virtual_joypad/doc/: detailed_specification.md  specification.txt
src/virtual_joypad/launch/: virtual_controller.launch.py
src/virtual_joypad/virtual_joypad/: __init__.py  config_loader.py  virtual_controller.py  virtual_joy.py  virtual_joy_slider.py
